# abs-census-merger

./: .gitignore  Census Data-LGA_long_prefix-2023-05-05 10-02.csv  Census Data-LGA_long_prefix-2023-05-05 10-09.csv  Main.py  README.md  config.csv  pyproject.toml  todo.md
censuswrangler/: __init__.py  _config.py  _datapack.py  census.py  config.csv  config.py  config_template.csv  datapack.py  main.py  pretty_dict.py  wrangle.py
samples/: Census Data - Merge-LGA_long_prefix-2023-05-09 11-59.csv  Census Data - Merge-LGA_short_prefix-2025-03-02 17-57.csv  Census Data - Pivot-LGA_short_prefix-2025-03-02 17-57.csv
